test/fail/import/import_brace_at_end.lly
#[
SyntaxError: '}' outside of a block.
    from brace_at_end.lly:6:
]#

import brace_at_end
